--- a/OneRM/OneRM/OneRM.csproj
+++ b/OneRM/OneRM/OneRM.csproj
@@ -23,4 +23,10 @@
     <Folder Include="Models\" />
     <Folder Include="Model\" />
   </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Controls\ExerciseDisplay.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
