--- a/OneRM/OneRM/OneRM.csproj
+++ b/OneRM/OneRM/OneRM.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="CardsView" Version="2.6.1" />
+    <PackageReference Include="com.ptdave.xamarin" Version="1.0.11" />
     <PackageReference Include="PropertyChanged.Fody" Version="3.2.8" />
     <PackageReference Include="Refractored.MvvmHelpers" Version="1.6.2" />
     <PackageReference Include="Xamarin.Forms" Version="4.5.0.495" />
@@ -26,6 +27,9 @@
 
   <ItemGroup>
     <EmbeddedResource Update="Controls\ExerciseDisplay.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Controls\ExerciseDisplayPopover.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
